# lidar_roof_measurements

roof_measurements/: .gitignore  679091168_roof.json  PRD.md  README.md  app.py  pyproject.toml
roof_measurements/notebooks/: explore.ipynb
roof_measurements/scripts/: batch_process.py
roof_measurements/src/roof_measurements/: __init__.py  cli.py  constants.py  datasources.py  export.py  features.py  footprints.py  io.py  models.py  pipeline.py  segmentation.py
roof_measurements/tests/: conftest.py  test_features.py  test_pipeline.py  test_segmentation.py
