[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roof-measurements"
version = "0.1.0"
description = "Extract roof facets, pitch, and height from LiDAR point clouds"
requires-python = ">=3.10"
dependencies = [
    "laspy[lazrs]>=2.5",
    "pyransac3d>=0.6.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "shapely>=2.0",
    "pydantic>=2.6",
    "click>=8.1",
    "requests>=2.31",
    "CSF>=1.0.1",
]

[project.scripts]
roof-measure = "roof_measurements.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roof_measurements"]

[tool.pytest.ini_options]
testpaths = ["tests"]
