[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roof-measurements"
version = "0.1.0"
description = "Extract roof facets, pitch, and height from LiDAR point clouds"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "shapely>=2.0",
    "pydantic>=2.6",
    "click>=8.1",
    "requests>=2.31",
    "laspy[lazrs]>=2.5",
    "pyransac3d>=0.6.0",
    "pyproj>=3.6",
    "pyogrio>=0.7",
    "geopandas>=0.14",
    "osmnx>=1.9",
    "plotly>=5.18",
    "folium>=0.19",
    "streamlit-folium>=0.20",
]

[project.scripts]
roof-measure = "roof_measurements.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# CSF is only needed for unclassified LAS files (not USGS 3DEP data).
# Install manually with: pip install pandas CSF
csf = ["pandas>=2.0", "CSF>=1.0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/roof_measurements"]

[tool.pytest.ini_options]
testpaths = ["tests"]
